fixed overflow bug of url of thumbnail

--- a/web/src/main/webapp/geonetwork.css
+++ b/web/src/main/webapp/geonetwork.css
@@ -987,6 +987,8 @@ span.thumbnail {
     font-size: small;
     font-style: italic;
     color: #2a628f;
+    overflow-x: scroll;
+    white-space: nowrap;
 }
 
 div.relatedElements {
